alignment issues

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -52,3 +52,7 @@ h1 {
     font-size: 26px;
 }
 
+h2 {
+    text-align: center;
+}
+
